Fix toolbar shrinking on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,10 @@ p {
     font-weight: 600;
 }
 
+.toolbar__row {
+    height: 64px;
+}
+
 .toolbar__spacer {
     flex: 1;
 }
